@@ -24,26 +24,28 @@ Users & services with sufficient permissions only will be able to upload, modify
 
 This service works with the DocStore Api and CaseData Api alongside their databases CCD Data Store and Document Management Store.
 
-#### Environment variables
-The following environment variables are required:
+### Runtime configuration
+Common runtime environment variables and deployment secrets. Application defaults are shown where present:
 
-| Name | Default | Description |
-|------|---------|-------------|
-      |CASE_DOCUMENT_S2S_AUTHORISED_SERVICES| ccd_case_document_am_api, ccd_gw, xui_webapp, ccd_data, bulk_scan_processor, bulk_scan_orchestrator|
-      |REFORM_SERVICE_NAME| ccd-case-document-am-api|
-      |REFORM_TEAM| ccd
-      |REFORM_ENVIRONMENT| local
-      |S2S_SECRET|
-      |S2S_KEY| S2S_KEY
-      |CCD_DOCUMENT_API_IDAM_KEY|
-      |DEFINITION_STORE_HOST|
-      |USER_PROFILE_HOST|
-      |DM_STORE_BASE_URL| http://dm-store:8080|
-      |CCD_DATA_STORE_API_BASE_URL| http://ccd-data-store-api:4452|
-      |app-insights-connection-string|
-      |IDAM_USER_URL| http://idam-api:5000 |
-      |IDAM_S2S_URL| http://service-auth-provider-api:8080|
-      |JAVA_TOOL_OPTIONS| -XX:InitialRAMPercentage=30.0 -XX:MaxRAMPercentage=65.0 -XX:MinRAMPercentage=30.0 -XX:+UseConcMarkSweepGC -agentlib:jdwp=transport=dt_socket, server=y,suspend=n,address=5005
+| Name | Default | Example | Description |
+|------|---------|---------|-------------|
+| CASE_DOCUMENT_S2S_AUTHORISED_SERVICES | See `application.yaml` | `ccd_case_document_am_api,ccd_gw,xui_webapp,ccd_data,bulk_scan_processor,bulk_scan_orchestrator` | Comma-separated authorised service names for S2S calls. |
+| CASE_DOCUMENT_AM_API_S2S_SECRET | AABBCCDDEEFFGGHH | Use the environment-specific S2S secret. | Service-to-service secret for this service. |
+| DM_STORE_BASE_URL | http://localhost:4506 | `http://dm-store:8080` for Docker. | Base URL for Document Management Store. |
+| CCD_DATA_STORE_API_BASE_URL | http://localhost:4452 | `http://ccd-data-store-api:4452` for Docker. | Base URL for CCD Data Store API. |
+| app-insights-connection-string | - | Set from Key Vault in deployed environments. | Application Insights connection string. |
+| IDAM_API_URL | http://localhost:5000 | `http://idam-api:5000` for Docker. | Base URL for IDAM user APIs. |
+| S2S_URL | http://localhost:4502 | `http://service-auth-provider-api:8080` for Docker. | Base URL for S2S auth provider. |
+| IDAM_OIDC_URL | http://localhost:5000 | `http://idam-api:5000` for Docker. | Base URL for IDAM OIDC discovery and JWKS lookup. The application appends `/o` for `issuer-uri`. |
+| OIDC_ISSUER | http://fr-am:8080/openam/oauth2/hmcts | Use the exact `iss` claim from a real accepted token. | Enforced issuer. Do not infer this from `IDAM_OIDC_URL`. |
+| OIDC_ALLOWED_ISSUERS | - | `<additional-token-iss>,<another-additional-token-iss>` | Optional comma-separated additional issuers for IDAM migration. Set only in environments that receive valid tokens whose `iss` differs from `OIDC_ISSUER`; each value must exactly match a real token `iss` claim. |
+| JAVA_TOOL_OPTIONS | - | `-XX:InitialRAMPercentage=30.0 -XX:MaxRAMPercentage=65.0 -XX:MinRAMPercentage=30.0 -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005` | Optional JVM options for JDK 21 local debugging. |
+
+`IDAM_OIDC_URL` and `OIDC_ISSUER` are intentionally separate. `IDAM_OIDC_URL` supplies `issuer-uri` for discovery and JWKS retrieval, while `OIDC_ISSUER` supplies the primary enforced issuer. If `OIDC_ISSUER` does not match the `iss` used in real caller tokens, authenticated requests will be rejected with `401` unless the exact issuer is temporarily listed in `OIDC_ALLOWED_ISSUERS`.
+
+Leave `OIDC_ALLOWED_ISSUERS` unset by default. Do not set it to `IDAM_OIDC_URL`, an OIDC discovery URL, a prefix, a wildcard, or a guessed realm URL. Use only explicit additional `iss` values copied from real accepted access tokens. This setting is temporary because each additional issuer broadens the set of trusted token issuers; remove it once traffic has converged on `OIDC_ISSUER`.
+
+The build-integrated functional/smoke verifier currently validates the real token `iss` against `OIDC_ISSUER` only. `OIDC_ALLOWED_ISSUERS` affects runtime validation, but the verifier must be updated before it can accept additional migration issuers.
 
 ## Building the application
 
@@ -153,6 +155,8 @@ export BEFTA_S2S_CLIENT_ID_OF_XUI_WEBAPP=xui_webapp
 export BEFTA_S2S_CLIENT_SECRET_OF_XUI_WEBAPP=AAAAAAAAAAAAAAAA
 export DM_STORE_BASE_URL=http://localhost:4506
 ```
+
+To verify the live enforced issuer locally, export `VERIFY_OIDC_ISSUER=true` and `OIDC_ISSUER`. The verifier also needs `IDAM_API_URL_BASE` or `IDAM_URL`, an OAuth client ID, secret and redirect URI, and one of these credential pairs: `CCD_CASEWORKER_AUTOTEST_EMAIL`/`CCD_CASEWORKER_AUTOTEST_PASSWORD` or `DEFINITION_IMPORTER_USERNAME`/`DEFINITION_IMPORTER_PASSWORD`. The verifier will fetch a real IDAM token, decode its `iss` claim, and fail if it does not exactly match `OIDC_ISSUER`.
 
 These tests also rely on the `CCD_BEFTA_JURISDICTION2.xlsx` file to be already imported. This file should be available in your local environment already.
 
